Revision history for SWISH-Prog-Lucy

0.01    21 June 2011
    * Initial release, based on SWISH::Prog::KSx.

0.02    23 June 2011
    * Fix bad s/ks/lucy/ strings from initial port.
    * bump SWISH::Prog dependency

0.03    28 June 2011
    * no functional changes, just bumped version because
      SWISH::Prog 0.51 had not been released prior to 0.02
      and all the failing test reports are misleading.

0.04    xxx
    * add highlightable_fields feature to expose the highlightable
      attribute of Lucy FullTextField objects.
